assets/css/style.css
/* ... */
@media (max-width: 990px) {
  .slider-indicators-wrapper .slider-indicators {
    display: flex;
    flex-direction: column; /* Stack indicators vertically on smaller screens */
    align-items: center;
  }

  .slider-indicators-wrapper .slider-indicators::after {
    display: none;
  }
}

.slider-indicators-wrapper .indicators-icon {
  width: 100px;
  color: var(--border-color);
  font-size: 16px;
  /* width: 20px; */
  height: 100px;
  display: flex;
  /* padding: 24px 20px; */
  /* margin-top: 20px; */
  margin-bottom: 10px;
  transition: all 0.3s ease;
  border-radius: 50%;
  border: 1px solid transparent;
  cursor: pointer;
  /* position: relative; */
  justify-content: center;
  align-items: center;
}

.slider-indicators-wrapper .slider-indicators.slick-current .indicators-icon,
.slider-indicators-wrapper .indicators-icon:hover {
  border: 1px solid var(--primary-color);
}

.slider-indicators-wrapper
  .slider-indicators.slick-current
  .indicators-icon
  > i,
.slider-indicators-wrapper .indicators-icon:hover > i {
  color: var(--primary-color);
}

.slider-indicators-wrapper .slider-indicators {
  position: relative;
}

.slider-indicators-wrapper .slider-indicators:nth-child(1)::after,
.slider-indicators-wrapper .slider-indicators:nth-child(2)::after,
.slider-indicators-wrapper .slider-indicators:nth-child(3)::after,
.slider-indicators-wrapper .slider-indicators:nth-child(4)::after {
  content: "";
  position: absolute;
  height: 1px;
  width: 100px;
  top: 50px;
  right: -100px;
  background-color: var(--border-color);
}

.our-menu .item-wrapper,
.lunch-time .item-wrapper,
.chef-choise .item-wrapper {
  margin-bottom: 25px;
}


.our-menu .item-wrapper .item-left,
.lunch-time .item-wrapper .item-left,
.chef-choise .item-wrapper .item-left {
  width: 85%;
  overflow: hidden;
}

.our-menu .item-wrapper .item-left h5,
.lunch-time .item-wrapper .item-left h5,
.chef-choise .item-wrapper .item-left h5 {
  color: var(--text-color);
}

.chef-choise .item-wrapper .item-left h5 {
  font-size: 18px;
}

.our-menu .item-wrapper .item-left p,
.lunch-time .item-wrapper .item-left p,
.chef-choise .item-wrapper .item-left p {
  font-size: 14px;
  padding-top: 4px;
}

.chef-choise .item-wrapper .item-left p {
  color: #7b7b7b;
  font-size: 12px;
}

.our-menu .item-wrapper .item-left h5::after,
.lunch-time .item-wrapper .item-left h5::after,
.chef-choise .item-wrapper .item-left h5::after {
  content: "";
  position: absolute;
  width: 1000px;
  border-bottom: 1px dotted #616f7d;
  bottom: 6px;
  left: 102%;
}

.our-menu .item-wrapper .item-right .item-price,
.our-menu .item-wrapper .item-right .price-symbol,
.lunch-time .item-wrapper .item-right .item-price,
.lunch-time .item-wrapper .item-right .price-symbol,
.chef-choise .item-wrapper .item-right .item-price,
.chef-choise .item-wrapper .item-right .price-symbol {
  color: var(--primary-color);
  font-family: "Pacifico", cursive;
  font-size: 24px;
}

.our-menu .item-wrapper .item-right .price-symbol,
.lunch-time .item-wrapper .item-right .price-symbol,
.chef-choise .item-wrapper .item-right .price-symbol  {
  vertical-align: super;
  font-size: 18px;
}

.our-menu .item-wrapper .item-right .item-btn a {
  text-decoration: none;
  color: var(--text-color-white);
  background-color: var(--primary-color);
  padding: 4px 12px;
  font-size: 14px;
  text-transform: uppercase;
  border-radius: 20px;
}

.our-menu .item-wrapper .item-right .item-btn {
  margin-top: 4px;
}

.slider-indicators-wrapper .slide-arrow.prev-arrow,
.slider-indicators-wrapper .slide-arrow.next-arrow {
  position: absolute;
  top: 48%;
  width: auto;
  font-size: 16px;
  color: var(--text-color-white);
  border: 2px solid #ededed;
  border-radius: 50%;
  padding: 10px 22px;
  line-height: 36px;
  text-align: center;
  z-index: 1;
}

.slider-indicators-wrapper .slide-arrow.next-arrow {
  right: 30px;
}
.slider-indicators-wrapper .slide-arrow.prev-arrow {
  left: 30px;
}

/* testimonial start */
.testimonials {
  background-image: url("./../images/testi-bg.jpg");
  /* background-color: black; */
  background-position: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

.testimonials .section-title h2 {
  color: var(--text-color-white);
}

.testimonials .testimonial-slider-wrapper .slider-content .testi-content {
  border-top: 1px solid #434245;
  position: relative;
  padding-top: 50px;
}

.testimonials
  .testimonial-slider-wrapper
  .slider-content
  .testi-content::before {
  content: "\f10d";
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  display: block;
  position: absolute;
  font-size: 24px;
  color: var(--text-color-white);
  top: 10px;
  text-align: center;
  color: var(--primary-color);
}

.testimonials .testimonial-slider-wrapper .slider-content .testi-content p,
.testimonials .testimonial-slider-wrapper .slider-content .testi-info {
  text-align: center;
  color: var(--text-color-white);
}

.testimonials .testimonial-slider-wrapper .slider-content .testi-content p {
  font-size: 16px;
  padding: 0 20px;
  font-style: italic;
}

.testimonials .testimonial-slider-wrapper .slider-content .testi-info .name {
  margin-right: 3px;
  font-weight: 700;
  color: #fff;
  text-transform: uppercase;
}

.testimonials
  .testimonial-slider-wrapper
  .slider-content
  .testi-info
  .position {
  margin-left: 3px;
  color: #a6a6a6;
  position: relative;
  padding-left: 10px;
}

.testimonials
  .testimonial-slider-wrapper
  .slider-content
  .testi-info
  .position::before {
  content: "|";
  position: absolute;
  right: 100%;
  width: 2px;
}

.testimonials .testimonial-slider-wrapper .slider-nav-wrapper {
  display: flex;
  justify-content: center;
  position: relative;
}

.testimonials .testimonial-slider-wrapper .slider-nav {
  display: inline-flex;
  text-align: center;
  width: 250px;
  position: relative;
  z-index: 1;
}
/* ... */

